css/main.css
/* ... */
#questions h3 {
  text-align: center;
}

.question {
  display: flex;
  justify-content: space-between;
  font-weight: 600;
  font-family: 'chaloops-medium', sans-serif;
}

.question:hover {
  color: var(--linksHover);
  cursor: pointer;
}

.question-container {
  border-bottom: solid;
  border-bottom-color: var(--black);
  border-bottom-width: 1px;
  margin: 15px 10px 0;
}

.question .fa {
  padding-left: 5px;
  box-sizing: border-box;
}

strong {
  font-family: 'chaloops-bold', sans-serif;
}

/************* Media Items ****************/

.media-item{
  padding: 20px 10px;
  box-sizing: border-box;
}

.media-item {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.media-item img {
  height: 100%;
  width: auto;
  max-width: 100%; /* Ensure images don't exceed their container's width */
  max-height: 700px;
}

.black{
  background-color: var(--black);
}

button{
  cursor: pointer;
  padding: 10px 30px;
  background: transparent;
  border: solid var(--black) 1px;
  color: var(--black);
}

button:hover{
  background: var(--black);
  color: var(--white);
}

.black button{
  border: solid var(--white) 1px;
  color: var(--white);
}

.black button:hover{
  background: var(--white);
  color: var(--black);
}

.center{
  text-align: center;
  display: block;
  margin: auto;
}


/************* Footer *******************/

footer {
  text-align: center;
  background-color: var(--gray);
  font-family: 'Montserrat', 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: var(--black);
  padding: 30px 50px;
}

footer a {
  font-family: 'Montserrat', 'Open Sans', Helvetica, Arial, sans-serif;
  font-weight: 400;
  color: var(--black);
  padding: 0px 8px;
  box-sizing: border-box;
}

footer a:hover {
  filter: brightness(30%);
}

footer a:active {
  filter: brightness(10%);
}

footer div {
  padding-bottom: 0px;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  position: relative;
}

/************* Modals ********************/

.modal {
  padding: 0px;
  position: relative;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: white;
  width: 100%;
  height: 100%;
  z-index: -1;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch !important;
  overflow-y: auto;
  height: calc(100% + 1px);
}

#modal-wwg img:nth-child(2),
#modal-wwg img:nth-child(3) {
  margin-top: 0px;
}

.modal img {
  max-width: 800px;
  display: block;
  margin: auto;
  margin-top: 60px;
}

.modal-exit {
  position: absolute;
  right: 50px;
  top: 30px;
  color: #0057AD;
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1em;
  line-height: 1.7em;
}

.modal-exit-bottom {
  position: relative;
  text-align: center;
  color: #0057AD;
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1em;
  line-height: 1.7em;
  display: block;
}

.modal-exit:hover,
.modal-exit-bottom:hover {
  filter: brightness(30%);
  transition: 0.4s;
}

.fa {
  padding-top: 0px !important;
}

@media screen and (max-width: 1500px) {

  iframe {
    max-width: 700px;
    height: 30vw;
    margin: auto;
    display: block;
    margin-bottom: 30px;
  }

}

/*************  Mobile ******************/

@media screen and (max-width: 700px) {

  header {
    display: flex;
    flex-direction: column;
    padding: 30px 10px;
    position: relative;
  }

  .logo {
    max-width: 180px;
  }

  iframe {
    max-width: 700px;
    height: 40vw;
    margin: auto;
    display: block;
    margin-bottom: 20px;
  }

  .rawLogo {
    /* font-size: 2.4vw; */
    font-size: 1.5em;
  }

  nav {
    /* font-size: 2.4vw; */
    font-size: 1.5em;
    margin-bottom: 15px;
  }

  .inside-wrapper p {
    font-family: "chaloops", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: var(--black);
    font-size: 1.3em;
    line-height: 1.5em;
    text-align: center;
    padding: 25px 20px;
  }

  .inside-wrapper p:nth-of-type(2),
  .row p:nth-of-type(2) {
    text-align: center;
  }

  .row p:nth-of-type(2) {
    padding-bottom: 40px;
  }

  #main-cta {
    padding: 13px 23px;
  }

  .row {
    display: flex;
    flex-direction: column-reverse;
    padding: 20px 10px;
    position: relative;
    text-align: center;
    box-sizing: border-box;
  }

  .row:nth-of-type(even) {
    flex-direction: column-reverse;
  }

  .row img {
    padding-top: 30px;
    padding-bottom: 20px;
  }

  .row .text {
    width: 100%;
  }

  .row h2 {
    font-size: 1.1em;
  }

  .row p {
    text-align: left;
    font-size: 1em;
  }

  .row .center{
    text-align: center !important;
  }

  .row-cta {
    text-align: center;
  }

  .footer {
    display: flex;
    flex-direction: column-reverse;
    position: relative;
  }

  footer {
    padding: 20px 10px;
  }

  footer div {
    padding-bottom: 10px;
  }

  .modal-exit {
    right: 30px;
    top: 30px;
  }

  .modal img:first-child {
    margin-top: 60px;
  }

  .modal img {
    margin-top: 20px;
  }

  .flex{
    flex-direction: column;
  }

  #pricing .flex {
    flex-direction: column;
  }

  #travel .flex {
    flex-direction: column;
  }

  .content img {
    padding: 10px 50px;
    box-sizing: border-box;
  }

  .content h3 {
    font-weight: 900;
    font-size: 1.7em;
    line-height: 1.6em;
    padding: 10px 20px;
  }

  .flex h3 {
    text-align: center;
  }

  .content p {
    font-weight: 400;
    font-size: 1.3em;
    line-height: 1.5em;
    padding: 10px 20px;
  }

  .flex p {
    text-align: center;
  }

  .content nav {
    justify-content: center;
    padding: 0;
  }

  .question .fa {
    padding-left: 10px;
    box-sizing: border-box;
  }

}

@media screen and (max-width: 350px) {
  .invert {
    background-color: var(--black) !important;
  }
}

